# groq-cli

./: README.md  pyproject.toml
groq_cli/: __init__.py  config.py  main.py  mcp_client.py  models.py
