[project]
name = "groq-cli"
version = "0.1.0"
description = "Standalone Groq CLI with MCP tool support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
groq-chat = "groq_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["groq_cli"]
